feat: implement secure bank REST API with JDBC auth, role-based access, and account CRUD